--- a/style.css
+++ b/style.css
@@ -298,4 +298,15 @@ button.agregado {
 .header-texto {
     text-align: center;
 }
+/* ===== FORZAR LOGO CENTRADO ===== */
+.logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.logo img {
+    display: block;
+    margin: 0 auto;
+}
 
