--- a/style.css
+++ b/style.css
@@ -313,3 +313,7 @@ button.agregado {
 .header-inner {
     flex-direction: column;
 }
+/* ===== HEADER CENTRADO EN PC ===== */
+.header-inner {
+    flex-direction: column;
+}
